--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "api_rest",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
